# foodgram-project-react

./: .gitignore  README.md  apps.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: foodgram_workflow.yml  yamdb_workflow.yml
backend/foodgram/: .isort.cfg  pyproject.toml  requirements.txt
backend/foodgram/api/: filters.py  recipe_serializers.py  recipe_views.py  recipes_serializers.py  serializers.py  urls.py  user_serializers.py  user_views.py  utilits.py  views.py
backend/foodgram/core/: pagination.py
backend/foodgram/docker/: Dockerfile
backend/foodgram/foodgram/: settings.py
backend/foodgram/recipes/: admin.py  models.py
backend/foodgram/recipes/management/commands/: filling.py
backend/foodgram/recipes/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20220610_1358.py  0003_auto_20220616_1742.py  0004_auto_20220616_1725.py  0004_remove_recipe_unique_author_recipe.py
backend/foodgram/templates/docs/: redoc.html
backend/foodgram/users/: admin.py  models.py  permissions.py
backend/foodgram/users/migrations/: 0001_initial.py  0002_auto_20220611_0756.py  0003_alter_user_email.py  0004_alter_follow_options.py
infra/: .env.template  data.json  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf
